# StarAtlasViz

./: main.py  pyproject.toml
assets/: readme.md  s1.css  style.css
