[tool.poetry]
name = "repl_python3_StarAtlasViz"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas-datareader = "^0.10.0"
plotly = "^5.4.0"
seaborn = "^0.11.2"
pandas = "^1.3.4"
Flask = "^2.0.2"
dash = "^2.0.0"
pycoingecko = "^2.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
